NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/NATT_Return_Item__c.object-meta.xml
<CustomObject>
    <description>Junction object that links cases to returned items</description>
    <label>Return Item</label>
    <nameField>
        <displayFormat>RTN-{000000}</displayFormat>
        <label>Return Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>