NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NAC_Is_Warranty__c.field-meta.xml
<CustomField>
    <fullName>NAC_Is_Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>