NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Accepted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Accepted_Quantity__c</fullName>
    <label>Accepted Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>