NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account__c</fullName>
    <formula>NATT_Case__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>