NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Case__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>