NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Core_Return_Location_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_2__c</fullName>
    <label>Core Return Location 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Core_Return_Location</valueSetName>
    </valueSet>
</CustomField>