NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Core_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location__c</fullName>
    <formula>Text(NATT_Case__r.NATT_Core_Return_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location</label>
    <type>Text</type>
</CustomField>