NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Internal_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Invoice_Number__c</fullName>
    <formula>NATT_Case__r.NATT_Internal_Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Invoice Number</label>
    <type>Text</type>
</CustomField>