NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_JDE_Parts_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Parts_Bill_To_Code__c</fullName>
    <formula>NATT_Case__r.Account.NATT_JDE_Parts_Bill_To_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Parts Bill To Code</label>
    <type>Text</type>
</CustomField>