NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_MPR_Tag__c.field-meta.xml
<CustomField>
    <fullName>NATT_MPR_Tag__c</fullName>
    <label>MPR Tag #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>