NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to link to Credit Orders.  Note:  the Purchase Order Number must match.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>