NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Received_Core__c.field-meta.xml
<CustomField>
    <fullName>NATT_Received_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Core</label>
    <type>Checkbox</type>
</CustomField>