NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Rejected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Rejected_Quantity__c</fullName>
    <label>Rejected Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>