NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Remarks_Notes__c.field-meta.xml
<CustomField>
    <fullName>NATT_Remarks_Notes__c</fullName>
    <inlineHelpText>Remarks and Notes from Carrier</inlineHelpText>
    <label>Remarks/Notes</label>
    <type>TextArea</type>
</CustomField>