NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Serial__c.field-meta.xml
<CustomField>
    <fullName>NATT_Serial__c</fullName>
    <label>Serial #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>