NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/fields/NATT_Warranty__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warranty__c</fullName>
    <label>Warranty #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>