NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NATT_Account__c</columns>
    <columns>NATT_Case__c</columns>
    <columns>NAME</columns>
    <columns>NATT_Part_Number__c</columns>
    <columns>NATT_Quantity__c</columns>
    <columns>NATT_Serial__c</columns>
    <columns>NATT_Warranty__c</columns>
    <columns>NATT_MPR_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_Core_Return_Location_2__c</field>
        <operation>equals</operation>
        <value>Carrier/Carlyle Compressor Core Returns</value>
    </filters>
    <filters>
        <field>NATT_Received_Core__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>