NATTQA-ENV/force-app/main/default/objects/NATT_Return_Item__c/listViews/My_Return_Items.listView-meta.xml
<ListView>
    <fullName>My_Return_Items</fullName>
    <columns>NATT_Account__c</columns>
    <columns>NATT_Case__c</columns>
    <columns>NAME</columns>
    <columns>NATT_Part_Number__c</columns>
    <columns>NATT_Product__c</columns>
    <columns>NATT_Quantity__c</columns>
    <columns>NATT_Serial__c</columns>
    <columns>NATT_Received_Core__c</columns>
    <columns>NATT_Remarks_Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NATT_Order__c</columns>
    <columns>NATT_Internal_Invoice_Number__c</columns>
    <columns>NATT_Accepted_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Return Items</label>
</ListView>